# causal-llm-eval

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  TODO.md  pyproject.toml
.claude/commands/: ai-review-local.md  dev-checklists.md  pre-merge-check.md  push-pr-update.md  review-plan.md  submit-pr.md
.claude/scripts/: openai_review.py
.github/: pull_request_template.md
.github/codex/prompts/: pr_review.md
.github/workflows/: ai_pr_review.yml  ci-gate.yml  tests.yml
analysis/: __init__.py
datasets/case_study_v1/: README.md  data.parquet  dgp_truth.json
graders/: __init__.py  ai_judge.py
harness/: COLD_START_VERIFICATION.md  __init__.py  dgp.py  extractor.py  probe.py  python_wrapper.sh  runner.py  scheduler.py  shell_parser.py  sitecustomize_template.py  telemetry.py  venv_pool.py
prompts/case_study/: README.md  v1.txt  v2.txt
rubrics/: README.md  case_study_v1.yaml  case_study_v2.yaml
tests/: test_attestation_default.py  test_case_study_prompt.py  test_case_study_rubric.py  test_dgp.py  test_harness_smoke.py  test_probe.py  test_probe_live.py  test_python_wrapper.py  test_runner.py  test_runner_live.py  test_shell_parser.py  test_sitecustomize.py  test_telemetry_live.py  test_telemetry_merger.py  test_venv_pool.py
