[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-llm-eval"
version = "0.0.1"
description = "Black-box evaluation framework for LLM agent behavior in causal inference tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.15"
authors = [
    {name = "Isaac Gerber"}
]
keywords = [
    "llm-evaluation",
    "causal-inference",
    "difference-in-differences",
    "agent-evaluation",
    "benchmark",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "anthropic>=0.40.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
include = ["harness*", "graders*", "analysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Slow and live tests are excluded by default at the addopts level so plain
# `pytest` matches `make test` behavior. Run `pytest -m slow` or `pytest -m live`
# to include them; `pytest -m ''` runs everything.
addopts = "-v --tb=short -m \"not slow and not live\""
markers = [
    "slow: marks tests as slow (exclude by default)",
    "live: tests that hit the live Claude API or spawn real claude subprocesses",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
